--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/006bd77650.js" crossorigin="anonymous"></script>
 </html>
